testdata/compiler/invalid/undefined-variable-in-path.pt
req listOrders:
  GET /groups/:group_id/orders

req ping:
  GET /ping

flow "x":
  ping -> listOrders
